# textaccounts

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
.files/: LEAD.md  pipeline.yaml
.files/logs/: 001-readme-and-config.hash  002-core-logic.hash  003-cli.hash  004-textsessions-integration.hash  005-fish-and-cleanup.hash
.files/prompts/: 001-readme-and-config.yaml  002-core-logic.yaml  003-cli.yaml  004-textsessions-integration.yaml  005-fish-and-cleanup.yaml
.files/reports/: 001-readme-and-config.report.md  002-core-logic.report.md  003-cli.report.md  004-textsessions-integration.report.md  005-fish-and-cleanup.report.md
.github/workflows/: test.yaml
completions/functions/: ta.fish  xta.fish
docs/: INVESTIGATE.yaml  SMOKETESTS.yaml  TESTING.yaml  onboarding.md  textaccounts.md
docs/specs/: shallow-clone.md  textaccounts-api-v0-2.md  textaccounts-api.md
scripts/: manual-smoke.sh
src/textaccounts/: __init__.py  api.py  cli.py  config.py  core.py  view.py
tests/: conftest.py  test_textaccounts_api.py  test_textaccounts_cli.py  test_textaccounts_config.py  test_textaccounts_core.py  test_textaccounts_view.py
