[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textaccounts"
version = "0.4.1"
description = "Manage multiple Claude Code accounts with full directory isolation"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.70",
]

[project.scripts]
textaccounts = "textaccounts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textaccounts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
