[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textaccounts"
version = "0.4.1"
description = "Manage multiple Claude Code accounts with full directory isolation"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Paolo D'Onorio De Meo", email = "p.donoriodemeo@gmail.com" },
]
keywords = ["claude", "claude-code", "anthropic", "profile", "multi-account", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.70",
]

[project.urls]
Homepage = "https://paperworlds.github.io"
Repository = "https://github.com/paperworlds/textaccounts"
Issues = "https://github.com/paperworlds/textaccounts/issues"
Blog = "https://paperworlds.github.io/blog/textaccounts.html"

[project.scripts]
textaccounts = "textaccounts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textaccounts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
